--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,9 +4,10 @@
         {% assign default_paths = site.pages | map: "path" %}
         <a class="site-title" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
 
-        <!-- <nav class="site-nav">
-            <a class="page-link" href="http://rahulbakshee.github.io" target="_blank">About</a>
-        </nav> -->
+        <nav class="site-nav">
+            <a class="page-link" href="{{ '/about.html' | relative_url }}">About</a>
+        </nav>
+        
         <nav class="site-nav">
             <a class="page-link" href="{{ '/contact.html' | relative_url }}">Contact</a>
         </nav>
